# first-person-pyramid

./: CMakeLists.txt  README.md  bindings.txt  build.sh  dependencies.sh  dependencies.txt
include/: anim_utils.h  camera.h  math_utils.h  mesh.h  mesh_utils.h  shaders.h  stb_image.h  window_utils.h
src/: anim_utils.cpp  backup.cpp  backup_test.cpp  camera.cpp  main.cpp  math_utils.cpp  mesh.cpp  mesh_utils.cpp  shaders.cpp  window.cpp  window_utils.cpp
